# ZeroMate

./: .clang-format  .cmake-format.yaml  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  alu_8cpp.html  alu_8cpp.js  alu_8cpp__incl.dot  alu_8cpp__incl.map  alu_8cpp__incl.md5  alu_8hpp.html  alu_8hpp.js  alu_8hpp__dep__incl.dot  alu_8hpp__dep__incl.map  alu_8hpp__dep__incl.md5  alu_8hpp__incl.dot  alu_8hpp__incl.map  alu_8hpp__incl.md5  alu_8hpp_source.html  annotated.html  annotated_dup.js  api__export_8hpp.html  api__export_8hpp.js  api__export_8hpp__dep__incl.map  api__export_8hpp__dep__incl.md5  api__export_8hpp_source.html  app__info_8hpp.html  app__info_8hpp.js  app__info_8hpp__dep__incl.map  app__info_8hpp__dep__incl.md5  app__info_8hpp_source.html  arm1176jzf__s_2isa_2data__processing_8cpp.html  arm1176jzf__s_2isa_2data__processing_8cpp__incl.map  arm1176jzf__s_2isa_2data__processing_8cpp__incl.md5  arm1176jzf__s_2isa_2data__processing_8hpp.html  arm1176jzf__s_2isa_2data__processing_8hpp__dep__incl.map  (+3942 more)
examples/16-paging_userspace/: CMakeLists.txt  README.md  description.txt
examples/16-paging_userspace/kernel/: link.ld
examples/16-paging_userspace/output/: idle_process.asm  idle_process.elf  kernel.asm  kernel.elf  proc_test_1.asm  proc_test_1.elf  proc_test_2.asm  proc_test_2.elf
examples/16-paging_userspace/userspace/: CMakeLists.txt
examples/18-edf/userspace/: CMakeLists.txt
lib/button/: CMakeLists.txt
lib/button/src/: button.cpp  button.hpp
lib/logger/: CMakeLists.txt
lib/logger/src/: logger.cpp
lib/logging_system/: CMakeLists.txt
lib/logging_system/src/: logging_system.cpp
lib/peripherals/button/: CMakeLists.txt
lib/peripherals/shift_register/: CMakeLists.txt
lib/seven_seg_display/: CMakeLists.txt
lib/seven_seg_display/src/: seven_seg_display.cpp  seven_seg_display.hpp
peripherals/button/: CMakeLists.txt  README.md
peripherals/button/src/: button.cpp  button.hpp
peripherals/dip_switch/: CMakeLists.txt  README.md
peripherals/dip_switch/src/: dip_switch.cpp  dip_switch.hpp
peripherals/led/: CMakeLists.txt  README.md
peripherals/led/src/: led.cpp  led.hpp
peripherals/logic_analyzer/: CMakeLists.txt  README.md
peripherals/logic_analyzer/src/: logic_analyzer.cpp  logic_analyzer.hpp
peripherals/serial_terminal/: CMakeLists.txt  README.md
peripherals/serial_terminal/src/: serial_terminal.cpp  serial_terminal.hpp
peripherals/seven_seg_display/: CMakeLists.txt  README.md
peripherals/seven_seg_display/src/: seven_seg_display.cpp  seven_seg_display.hpp
peripherals/ssd1306_oled/: CMakeLists.txt  README.md
peripherals/ssd1306_oled/src/: ssd1306_oled.cpp  ssd1306_oled.hpp
src/: CMakeLists.txt  app_info.hpp  config.hpp  main.cpp  soc.cpp  soc.hpp
src/arm1176jzf_s/: core.cpp  core.hpp  exceptions.hpp  instruction_decoder.cpp  instruction_decoder.hpp  mac.cpp  mac.hpp
src/arm1176jzf_s/isa/: block_data_transfer.cpp  block_data_transfer.hpp  branch_and_exchange.hpp  data_processing.hpp  halfword_data_transfer.cpp  halfword_data_transfer.hpp  instruction.cpp  instruction.hpp  isa.hpp  isa_decoder.cpp  isa_decoder.hpp  multiply.cpp  multiply.hpp  multiply_long.cpp  single_data_swap.cpp  single_data_swap.hpp  single_data_transfer.cpp  single_data_transfer.hpp  sw_interrupt.hpp
src/arm1176jzf_s/mocks/: ram.hpp
src/arm1176jzf_s/registers/: cspr.cpp  cspr.hpp
src/bus/: bus.hpp
src/core/: bus.cpp  bus.hpp  config.hpp  soc.cpp  soc.hpp
src/core/arm1176jzf_s/: alu.cpp  alu.hpp  context.cpp  context.hpp  core.cpp  core.hpp  cpu_core.cpp  cpu_core.hpp  exceptions.cpp  exceptions.hpp  mac.cpp  mac.hpp
src/core/coprocessors/: coprocessor.cpp  coprocessor.hpp  cp15.cpp  cp15.hpp
src/core/peripherals/: arm_timer.cpp  arm_timer.hpp  auxiliary.cpp  auxiliary.hpp  bsc.cpp  bsc.hpp  bus.cpp  bus.hpp  external_peripheral.hpp  gpio.cpp  gpio.hpp  interrupt_controller.cpp  interrupt_controller.hpp  mini_uart.cpp  mini_uart.hpp  monitor.cpp  monitor.hpp  peripheral.hpp  ram.cpp  ram.hpp  system_clock_listener.hpp  trng.cpp  trng.hpp
src/core/utils/: elf_loader.cpp  elf_loader.hpp  list_parser.cpp  math.hpp  singleton.hpp
src/cpu/: ARM1176JZF_S.cpp  ARM1176JZF_S.hpp  alu.cpp  alu.hpp  arm1176jzf_s.cpp  arm1176jzf_s.hpp  instruction_decoder.cpp  instruction_decoder.hpp  mac.cpp  mac.hpp
src/cpu/isa/: branch.cpp  branch.hpp  branch_and_exchange.cpp  branch_and_exchange.hpp  data_processing.cpp  data_processing.hpp  decoder.cpp  decoder.hpp  instruction.cpp  instruction.hpp  isa.hpp  multiply.cpp  multiply.hpp  multiply_long.cpp  multiply_long.hpp  single_data_transfer.cpp  single_data_transfer.hpp
src/cpu/mocks/: ram.hpp
src/cpu/registers/: cspr.cpp  cspr.hpp
src/gui/: control_window.cpp  control_window.hpp  file_window.cpp  file_window.hpp  gui.cpp  gui.hpp  object.hpp  ram_window.hpp  registers_window.cpp  registers_window.hpp  source_code_window.cpp  source_code_window.hpp  window.cpp  window.hpp
src/gui/imgui_glfw/: CMakeLists.txt  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h
src/gui/windows/: control_window.cpp  control_window.hpp  cp10_window.cpp  cp10_window.hpp  cp15_window.cpp  cp15_window.hpp  demo_window.cpp  demo_window.hpp  file_window.cpp  file_window.hpp  gpio_window.cpp  gpio_window.hpp  log_window.cpp  log_window.hpp  ram_window.cpp  ram_window.hpp  registers_window.cpp  registers_window.hpp  source_code_window.cpp  source_code_window.hpp  top_bar_menu.cpp  top_bar_menu.hpp
src/peripherals/: ram.hpp
src/utils/: elf_loader.cpp  elf_loader.hpp  list_parser.cpp  list_parser.hpp  math.hpp
src/utils/logger/: logger.cpp  logger_stdo.cpp  logger_stdo.hpp
test/: CMakeLists.txt  tests_main.cpp
test/core/: bus_test.cpp
test/cpu/isa/: and_test.cpp  eor_test.cpp  mov_test.cpp  mvn_test.cpp  teq_test.cpp  tst_test.cpp
test/simple_programs/: factorial_test.cpp  fibonacci_test.cpp
test/simple_programs/factorial/: factorial_test.cpp
test/simple_programs/fibonacci/: fibonacci_test.cpp
test/utils/math/: asr_test.cpp  (+6 more)
(+1502 files in other folders)
